# prism

./: .gitignore  AGENTS.md  ANALYSIS_gemma4_e4b_vs_e2b.md  ANALYSIS_gemma4_v1_adapter_geometry.md  CHANGELOG.md  CONTRIBUTING.md  FUTURE_MODEL_INTAKE.md  LICENSE  MODEL_RUN_TEMPLATE.md  README.md  RELEASE_TODO.md  conftest.py  pyproject.toml  quickstart.ipynb  reproduce_paper.py  requirements.txt  sitecustomize.py
.github/workflows/: python-app.yml  test.yml
data/model-runs/: gemma4_e2b_baseline_verify.json  gemma4_e2b_layer_analysis.json  gemma4_e2b_prism.json  gemma4_e2b_v1_adapted_prism.json  gemma4_e4b_prism.json  mistral_7b_prism.json  qwen35_2b_base_prism.json  qwen3_8b_prism.json
docs/: NLA.md  PROVENANCE.md
experiments/: hybrid_logic_test.py  hybrid_smoke_test.py  mlp_attention_test.py  positional_sensitivity_test.py  probing_steering_test.py  qwen_baseline.py  sae_smoke_test.py
experiments/genesis/: README.md  fix_readme.py  go.py  prism_gui.py
experiments/genesis/prism/: __init__.py  analysis.py  core.py
experiments/genesis/prompts/: phase10_ood_semantic_eval.json  phase10_ood_semantic_eval_family2.json  phase9_activation_patch_eval_heldout.json
experiments/genesis/scripts/: analyze_phase10_post10y_synthesis.py  analyze_phase11_near_misses.py  analyze_phase13a_pair_susceptibility.py  analyze_phase9_patching_hardening.py  analyze_phase9_reviewer_summary.py  analyze_phase9_steering_dose_response.py  analyze_phase9_steering_patching_consistency.py  genesis_loader.py  phase10_experiment_utils.py  phase10_site_hooks.py  phase9_semantic_utils.py  (+67 more)
experiments/sgt/: README.md  RUNBOOK_COLAB.md  format_outcome_table.py  ll_acc_eval.py  morning_workflow.sh  plot_bands.py  preregistration.md  preregistration_addendum_ll_acc.md  requirements.lock.txt  run_plan.md  sgt_analysis.py  sgt_runner.py
logs/model-runs/: index.md
prism/: __init__.py
scripts/: genesis_triton_diff.py  run_genesis_triton_diff_msvc.bat  run_genesis_v3_msvc.bat  run_model_analysis.py
src/prism/: __init__.py  analysis.py  analysis_microscope.py  architecture.py  core.py
src/spectral_microscope/: __init__.py  analysis.py  core.py
tests/: def_list.txt  extract_imports.ps1  imported_funcs.txt  imported_funcs_utf8.txt  test_adapter_coverage.py  test_analysis.py  test_analysis_core.py  test_attention.py  test_causal.py  test_circuit_discovery.py  test_eval_calibration.py  test_eval_drift_metrics.py  test_eval_early_warning.py  test_eval_metrics.py  test_eval_temporal.py  test_hessian_diagnostics.py  test_hybrid.py  test_integration_advanced_diagnostics.py  test_integration_advanced_geometry.py  test_integration_master_scan.py  test_lens.py  test_math_circuit_synergy.py  test_math_crosslayer_scoring.py  test_math_generative_interventions.py  test_math_generative_spectrum.py  test_math_gradient_alignment.py  test_math_natural_scalar_interchange.py  test_math_orthogonal_remainder.py  test_math_spectrum_bridge.py  test_math_sublayer_localization.py  test_math_timing_composition.py  test_mlp.py  test_model_runs.py  test_nla_geometry.py  test_nla_inference.py  test_prism_analysis_hardware.py  test_probing.py  test_provenance.py  test_sae.py  test_telemetry.py
(+98 files in other folders)
