[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-microscope"
version = "0.2.0"
description = "Inline spectral telemetry for autoregressive language-model generation."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "HumanAI Convention contributors" }
]
license = { file = "LICENSE" }
dependencies = [
  "torch>=2.1.0",
  "transformers>=4.40.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
notebook = [
  "pandas>=2.0.0",
  "matplotlib>=3.7.0",
  "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/humanaiconvention/spectral-microscope"
Repository = "https://github.com/humanaiconvention/spectral-microscope"
Issues = "https://github.com/humanaiconvention/spectral-microscope/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["experiments", "logs", ".pytest_cache"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
